# ViennaTools-Docker

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: build-image.yml
ViennaPS/: Dockerfile  viennals_cmake.patch  viennaray_cmake.patch
ViennaTools/: Dockerfile  README.md  launch.sh  viennahrle_cmake.patch  viennals_cmake.patch  viennaray_cmake.patch
project/: CMakeLists.txt  Trench2D.cpp  launch.sh  run.sh
